--- a/midterms/midterms/mid-serve-static/public/contact.html
+++ b/midterms/midterms/mid-serve-static/public/contact.html
@@ -18,7 +18,7 @@
     </div>
   </head>
   <body>
-    <form action="http://localhost/process_post" method="POST">
+    <form action="http://localhost:3000/process_post" method="POST">
       Name: <input type="text" name="name" /> <br />
       Subject: <input type="text" name="subject" /> <br />
       Message: <input type="text" name="message" /> <br />
