--- a/midterms/midterms/mid-serve-static/public/contact.html
+++ b/midterms/midterms/mid-serve-static/public/contact.html
@@ -18,12 +18,67 @@
     </div>
   </head>
   <body>
-    <form action="http://localhost:3000/process_post" method="POST">
-      Name: <input type="text" name="name" /> <br />
-      Subject: <input type="text" name="subject" /> <br />
-      Message: <input type="text" name="message" /> <br />
-      Email: <input type="text" name="email" /> <br />
-      <input type="submit" value="Submit" />
-    </form>
+    <h2>Input Contact Information:</h2>
+
+    <div class="container">
+      <form action="http://localhost:3000/process_post" method="POST">
+        <div class="row">
+          <div class="col-25">
+            <label for="name">Name:</label>
+          </div>
+          <div class="col-75">
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="Enter your name..."
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-25">
+            <label for="subject">Subject:</label>
+          </div>
+          <div class="col-75">
+            <input
+              type="text"
+              id="subject"
+              name="subject"
+              placeholder="Enter subject..."
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-25">
+            <label for="message">Email:</label>
+          </div>
+          <div class="col-75">
+            <input
+              type="text"
+              id="email"
+              name="email"
+              placeholder="Enter email..."
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-25">
+            <label for="email">Message</label>
+          </div>
+          <div class="col-75">
+            <textarea
+              id="message"
+              name="message"
+              placeholder="Enter message..."
+              style="height: 200px"
+            ></textarea>
+          </div>
+        </div>
+        <br />
+        <div class="row">
+          <input type="submit" value="Submit" />
+        </div>
+      </form>
+    </div>
   </body>
 </html>
